force-app/main/default/objects/dca_mass_action__Mass_Action_Log__c/dca_mass_action__Mass_Action_Log__c.object-meta.xml
<CustomObject>
    <description>Information about Mass Action executions.</description>
    <label>Mass Action Log</label>
    <nameField>
        <displayFormat>MAL-{000000}</displayFormat>
        <label>Mass Action Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mass Action Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>