force-app/main/default/objects/dca_mass_action__Mass_Action_Log__c/fields/dca_mass_action__Job_ID__c.field-meta.xml
<CustomField>
    <fullName>dca_mass_action__Job_ID__c</fullName>
    <description>Apex Batch Job ID</description>
    <inlineHelpText>Apex Batch Job ID</inlineHelpText>
    <label>Job ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>