force-app/main/default/objects/dca_mass_action__Mass_Action_Log__c/fields/dca_mass_action__Long_Message__c.field-meta.xml
<CustomField>
    <fullName>dca_mass_action__Long_Message__c</fullName>
    <description>The full error message, particularly if more than 255 characters.</description>
    <inlineHelpText>The full error message, particularly if more than 255 characters.</inlineHelpText>
    <label>Long Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>