force-app/main/default/objects/dca_mass_action__Mass_Action_Log__c/fields/dca_mass_action__Mass_Action_Configuration__c.field-meta.xml
<CustomField>
    <fullName>dca_mass_action__Mass_Action_Configuration__c</fullName>
    <label>Mass Action Configuration</label>
    <referenceTo>dca_mass_action__Mass_Action_Configuration__c</referenceTo>
    <relationshipLabel>Mass Action Logs</relationshipLabel>
    <relationshipName>Mass_Action_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>