force-app/main/default/objects/dca_mass_action__Mass_Action_Log__c/fields/dca_mass_action__Processed_Batches__c.field-meta.xml
<CustomField>
    <fullName>dca_mass_action__Processed_Batches__c</fullName>
    <description>Total number of batches processed successfully. Each batch contains a set of records.</description>
    <inlineHelpText>Total number of batches processed successfully. Each batch contains a set of records.</inlineHelpText>
    <label>Processed Batches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>